<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/mainNav_AddListing"
        android:checkable="false"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_send"
        android:title="Add Listing"
        android:visible="true" />
    <item
        android:id="@+id/mainNav_Home"
        android:checkable="false"
        android:enabled="true"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="Home"
        android:visible="true"
        app:showAsAction="withText" />
    <item
        android:id="@+id/mainNav_Profile"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="Profile"
        android:visible="true"
        app:showAsAction="withText" />
</menu>